@@ -44,7 +44,7 @@
  * available we can use it to check which compiler is being used.
  */
 #warning "You upgraded to gcc 4.5.2 and mandatory newlib patches, did you?"
-//#warning "If not, see http://www.webalice.it/fede.tft/miosix/gcc-4.5.2.html"
+#warning "If not, see http://www.webalice.it/fede.tft/miosix/gcc-4.5.2.html"
 #endif
 
 namespace miosix {
